tests/baselines/reference/complicatedPrivacy.errors.txt
tests/cases/compiler/complicatedPrivacy.ts(11,24): error TS1054: A 'get' accessor cannot have parameters.
tests/cases/compiler/complicatedPrivacy.ts(35,5): error TS1170: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/compiler/complicatedPrivacy.ts(35,6): error TS2693: 'number' only refers to a type, but is being used as a value here.
tests/cases/compiler/complicatedPrivacy.ts(73,55): error TS2694: Namespace 'mglo5' has no exported member 'i6'.


==== tests/cases/compiler/complicatedPrivacy.ts (4 errors) ====
    module m1 {
        export module m2 {
    
    
            export function f1(c1: C1) {
            }
            export function f2(c2: C2) {
            }
    
            export class C2 implements m3.i3 {
                public get p1(arg) {
                           ~~
!!! error TS1054: A 'get' accessor cannot have parameters.
                    return new C1();
                }
    
                public set p1(arg1: C1) {
                }
    
                public f55() {
                    return "Hello world";
                }
            }
        }
    
        export function f2(arg1: { x?: C1, y: number }) {
        }
    
        export function f3(): {
            (a: number) : C1;
        } {
            return null;
        }
    
        export function f4(arg1: 
        {
        [number]: C1; // Used to be indexer, now it is a computed property
        ~~~~~~~~
!!! error TS1170: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
         ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
        }) {
        }
    
    
        export function f5(arg2: {
            new (arg1: C1) : C1
        }) {
        }
        module m3 {
            function f2(f1: C1) {
            }
    
            export interface i3 {
                f55(): string;
            }
        }
    
        class C1 {
        }
    
        interface i {
            x: number;
        }
    
        export class C5 implements i {
            public x: number;
        }
    
        export var v2: C1[];
    }
    
    class C2 {
    }
    
    module m2 {
        export module m3 {
    
            export class c_pr  implements mglo5.i5, mglo5.i6 {
                                                          ~~
!!! error TS2694: Namespace 'mglo5' has no exported member 'i6'.
                f1() {
                    return "Hello";
                }
            }
            
            module m4 {
                class C {
                }
                module m5 {
                    
                    export module m6 {
                        function f1() {
                            return new C();
                        }
                    }
                }
            }
    
        }
    }
    
    module mglo5 {
        export interface i5 {
            f1(): string;
        }
    
        interface i6 {
            f6(): number;
        }
    }
    